# llm_companion

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native_lib.cpp
android/app/src/main/cpp/llama.cpp/src/: llama.cpp
android/app/src/main/java/com/example/llm_companion/: MainActivity.java
lib/: main.dart  native_bridge.dart
lib/logic/: prompt_engine.dart
lib/models/: chat_message.dart  model_config.dart
lib/services/: database_service.dart
lib/ui/: chat_bubble.dart  chat_drawer.dart  chat_input.dart  model_sheet.dart  settings_sheet.dart
test/: widget_test.dart
